@@ -1,0 +1,10 @@
+{ lib, ... }:
+let
+  inherit (lib) mkDefault;
+in
+{
+  services.kanshi = {
+    systemdTarget = mkDefault "graphical-session.target";
+  };
+}
+
